--- a/Python - Udemy/curso_python/.vscode/settings.json
+++ b/Python - Udemy/curso_python/.vscode/settings.json
@@ -1,20 +1,25 @@
 {
-  "window.zoomLevel": 1,
-  "editor.fontSize": 26,
+  "window.zoomLevel": 0,
+  "editor.fontSize": 16,
   "editor.hover.enabled": true,
   "workbench.startupEditor": "none",
   "explorer.compactFolders": false,
-  "terminal.integrated.fontSize": 24,
-  "editor.rulers": [80, 120],
-  "workbench.colorTheme": "OM Theme (Default Dracula Italic)",
-  "workbench.iconTheme": "material-icon-theme",
+  "terminal.integrated.fontSize": 16,
+  "editor.rulers": [80],
+  // "workbench.colorTheme": "OM Theme (Default Dracula Italic)",
+  // "workbench.iconTheme": "material-icon-theme",
   "code-runner.executorMap": {
     "python": "clear ; python -u"
   },
   "code-runner.runInTerminal": true,
+  "editor.formatOnSave": true,
   "code-runner.ignoreSelection": true,
-  "editor.fontFamily": "Consolas, 'Dank Mono', 'Source Code Pro', 'Fira Code', Menlo, 'Inconsolata', 'Droid Sans Mono', 'DejaVu Sans Mono', 'Ubuntu Mono', 'Courier New', Courier, Monaco, monospace",
-  "terminal.integrated.fontFamily": "",
+  "editor.fontFamily": "Monaco",
+  "editor.cursorStyle": "line",
+  "editor.cursorBlinking": "smooth",
+  "terminal.integrated.fontFamily": "Monaco",
+  "terminal.integrated.cursorStyle": "line",
+  "terminal.integrated.cursorWidth": 2,
   "[python]": {
     "editor.defaultFormatter": "ms-python.python",
     "editor.tabSize": 4,
@@ -26,7 +31,7 @@
       "source.organizeImports": "explicit"
     }
   },
-  "python.languageServer": "Pylance",
+  "python.languageServer": "None",
   "python.formatting.autopep8Args": [
     "--indent-size=4",
     "--max-line-length=80"
